@@ -3,7 +3,9 @@ Some stuff to ignore
 package NotAPackage;
 sub NotASub {}
 =cut
-package Mypack;
+package A::B;
 sub MySub {}
+use constant A => 3;
+LABEL:
 __END__
 sub IgnoreSub {}
